--- a/index.html
+++ b/index.html
@@ -23,52 +23,52 @@
       <nav class="menu-bar">
         <ul class="nav">
           <li>
-            <a href="#">File</a>
+            <a href="#0">File</a>
             <ul class="sub-menu">
-              <li class="new-file"><a href="#">New</a></li>
-              <li class="open-file"><a href="#">Open...</a></li>
+              <li class="new-file"><a href="#0">New</a></li>
+              <li class="open-file"><a href="#0">Open...</a></li>
               <li style="display: none"><input type="file" id="file-input" /></li>
-              <li class="save"><a href="#">Save</a></li>
-              <li class="save-as"><a href="#">Save As...</a></li>
-              <li class="separator"><a href="#"></a></li>
-              <li><a href="#">Page Setup</a></li>
-              <li><a href="#">Print...</a></li>
-              <li class="separator"><a href="#"></a></li>
-              <li><a href="#">Exit</a></li>
+              <li class="save"><a href="#0">Save</a></li>
+              <li class="save-as"><a href="#0">Save As...</a></li>
+              <li class="separator"><a href="#0"></a></li>
+              <li><a href="#0">Page Setup</a></li>
+              <li><a href="#0">Print...</a></li>
+              <li class="separator"><a href="#0"></a></li>
+              <li><a href="#0">Exit</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Edit</a>
+            <a href="#0">Edit</a>
             <ul class="sub-menu">
-              <li class="undo"><a href="#">Undo</a></li>
-              <li class="separator"><a href="#"></a></li>
-              <li class="cut"><a class="disabled" href="#">Cut</a></li>
-              <li class="copy"><a class="disabled" href="#">Copy</a></li>
-              <li class="paste"><a href="#">Paste</a></li>
-              <li class="delete"><a class="disabled" href="#">Delete</a></li>
-              <li class="separator"><a href="#"></a></li>
-              <li><a href="#">Find...</a></li>
-              <li><a href="#">Find Next</a></li>
-              <li><a href="#">Replace...</a></li>
-              <li><a class="disabled" href="#">Go To...</a></li>
-              <li class="separator"><a href="#"></a></li>
-              <li class="select-all"><a href="#">Select All</a></li>
-              <li><a href="#">Time/Date</a></li>
-            </ul>
-          </li>
-
-          <li>
-            <a href="#">Format</a>
-            <ul class="sub-menu">
-              <li><a href="#">Word Wrap</a></li>
-              <li><a href="#">Font...</a></li>
+              <li class="undo"><a href="#0">Undo</a></li>
+              <li class="separator"><a href="#0"></a></li>
+              <li class="cut"><a class="disabled" href="#0">Cut</a></li>
+              <li class="copy"><a class="disabled" href="#0">Copy</a></li>
+              <li class="paste"><a href="#0">Paste</a></li>
+              <li class="delete"><a class="disabled" href="#0">Delete</a></li>
+              <li class="separator"><a href="#0"></a></li>
+              <li><a href="#0">Find...</a></li>
+              <li><a href="#0">Find Next</a></li>
+              <li><a href="#0">Replace...</a></li>
+              <li><a class="disabled" href="#0">Go To...</a></li>
+              <li class="separator"><a href="#0"></a></li>
+              <li class="select-all"><a href="#0">Select All</a></li>
+              <li><a href="#0">Time/Date</a></li>
             </ul>
           </li>
 
           <li>
-            <a href="#">View</a>
+            <a href="#0">Format</a>
             <ul class="sub-menu">
-              <li><a class="disabled" href="#">Status Bar</a></li>
+              <li><a href="#0">Word Wrap</a></li>
+              <li><a href="#0">Font...</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#0">View</a>
+            <ul class="sub-menu">
+              <li><a class="disabled" href="#0">Status Bar</a></li>
             </ul>
           </li>
 
@@ -76,8 +76,8 @@
             <a href="#0">Help</a>
             <ul class="sub-menu">
               <li><a href="https://github.com/DilshodbekAqiyev" target="_blank">View Help</a></li>
-              <li class="separator"><a href="#"></a></li>
-              <li><a href="#">About Notepad</a></li>
+              <li class="separator"><a href="#0"></a></li>
+              <li><a href="#0">About Notepad</a></li>
             </ul>
           </li>
         </ul>
