--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   <body>
     <div class="notepad-container">
       <div class="title-bar">
-        <img
-          class="notepad-icon"
-          src="https://www.file-extensions.org/imgs/app-icon/128/759/microsoft-windows-notepad-icon.png"
-        />
-        <span class="title"></span>
+        <div>
+          <img
+            class="notepad-icon"
+            src="https://www.file-extensions.org/imgs/app-icon/128/759/microsoft-windows-notepad-icon.png"
+          />
+          <span class="title"></span>
+        </div>
+        <div class="close-window">X</div>
       </div>
 
       <nav class="menu-bar">
